--- a/src/app/components/homepage/homepage.html
+++ b/src/app/components/homepage/homepage.html
@@ -3,7 +3,7 @@
   <!-- HEADER -->
   <header class="header">
     <div class="logo">
-  <img src="/images/homielogo.png" alt="HomieGamingHub logo" />
+  <img src="images/homielogo.png" alt="HomieGamingHub logo" />
 </div>
 
     <button class="login-btn" (click)="goToLogin()">Login</button>
