--- a/src/app/scores/scores.html
+++ b/src/app/scores/scores.html
@@ -1,1 +1,6 @@
-<p>scores works!</p>
+<div class="scores-page">
+  <button class="logout" (click)="logout()">Logout</button>
+
+  <h1>Scores 🏆</h1>
+  <p>You are connected 🎉</p>
+</div>
