--- a/src/app/components/homepage/homepage.html
+++ b/src/app/components/homepage/homepage.html
@@ -1,14 +1,6 @@
 <div class="homepage">
 
-  <!-- HEADER -->
-  <header class="header">
-    <div class="logo">
-  <img src="images/homielogo.png" alt="HomieGamingHub logo" />
-</div>
 
-    <button class="login-btn" (click)="goToLogin()">Login</button>
-
-  </header>
 
   <!-- HERO -->
   <main class="hero">
@@ -28,7 +20,7 @@
     </div>
 
     <!-- CTA -->
-    <button class="cta">
+    <button class="cta" (click)="goToLogin()">
       💖 Play with friends
     </button>
 
