--- a/src/app/components/scores/scores.html
+++ b/src/app/components/scores/scores.html
@@ -1,6 +1,5 @@
 <div class="scores-page">
-  <button class="logout" (click)="logout()">Logout</button>
-
   <h1>Scores 🏆</h1>
   <p>You are connected 🎉</p>
+  <button (click)="gotogames()">Go to Games</button>
 </div>
